--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -4,6 +4,8 @@
 <head>
     <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Janine B. Fernandez Portfolio Creative Graphics. Creativity never stops. Discover your process.">
+    <meta name="keywords" content="Janine B. Fernandez, Janine, Fernandez, Janine Fernandez Portfolio, Design, Creativity, Art, Digital Art, Graphics, Quotes, Inspiration, Creative">
     <meta charset="UTF-8">
 
     <!--Javascript-->
@@ -38,14 +40,14 @@
     <div class = "gridwrapper">
         <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/icons/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
-            <a href="../index.html"><p>Janine B. Fernandez | <!--<img src="../images/j.ix-logo.png" alt="Janine B. Fernandez Logo"> | -->Porfolio</p></a>
+            <a href="../index.html"><p>Janine B. Fernandez | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
-                    <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Janine Fernandez Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -54,31 +56,31 @@
 
 <div class="row">
     <div class="column">
-        <img src="../images/graphics/find_ways.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="../images/graphics/find_ways.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor" alt="Find ways to do the things you love">
     </div>
     <div class="column">
-        <img src="../images/graphics/unimaginable.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+        <img src="../images/graphics/unimaginable.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor" alt="The unimaginable happens nowadays">
     </div>
     <div class="column">
-        <img src="../images/graphics/mind_time.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+        <img src="../images/graphics/mind_time.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor" alt="All of you were given two gifts, your mind and your time">
     </div>
     <div class="column">
-        <img src="../images/graphics/lion_gazelle.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+        <img src="../images/graphics/lion_gazelle.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor" alt="A lion smells a dying gazelle">
     </div>
     <div class="column">
-        <img src="../images/graphics/lead_example.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+        <img src="../images/graphics/lead_example.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor" alt="Lead by example">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4840/46074063542_0c206014fb_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4840/46074063542_0c206014fb_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor" alt="Be Free">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4811/46074063502_0f42b679e8_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4811/46074063502_0f42b679e8_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor" alt="Zodiac Sign Galaxy">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4864/45400146264_252120e2d0_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4864/45400146264_252120e2d0_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor" alt="Give and Take">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4876/45508409145_cac42313b8_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4876/45508409145_cac42313b8_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor" alt="Find Balance">
     </div>
 </div>
 
@@ -89,49 +91,50 @@
 
     <div class="mySlides">
         <div class="numbertext">Find Ways</div>
-        <img src="../images/graphics/find_ways.jpg">
+        <img src="../images/graphics/find_ways.jpg" alt="Find ways to do the things you love">
     </div>
 
     <div class="mySlides">
             <div class="numbertext">Unimaginable</div>
-            <img src="../images/graphics/unimaginable.jpg">
+            <img src="../images/graphics/unimaginable.jpg" alt="The unimaginable happens nowadays">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Find Time</div>
-      <img src="../images/graphics/mind_time.jpg">
+      <img src="../images/graphics/mind_time.jpg" alt="All of you were given two gifts, your mind and your time">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Lion and Gazelle</div>
-      <img src="../images/graphics/lion_gazelle.jpg">
+      <img src="../images/graphics/lion_gazelle.jpg" alt="A lion smells a dying gazelle">
     </div>
     
     <div class="mySlides">
       <div class="numbertext">Lead by Example</div>
-      <img src="../images/graphics/lead_example.jpg">
+      <img src="../images/graphics/lead_example.jpg" alt="Lead by example">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">FREE</div>
-      <img src="../images/graphics/free.jpg" style="width:80%">
+      <img src="../images/graphics/free.jpg" style="width:80%" alt="Be Free">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Zodiac Signs</div>
-        <img src="../images/graphics/zodiacs.jpg" style="width:80%">
+        <img src="../images/graphics/zodiacs.jpg" style="width:80%" alt="Zodiac Sign Galaxy">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Give & Take</div>
-        <img src="../images/graphics/giveandtake.jpg" style="width:80%">
+        <img src="../images/graphics/giveandtake.jpg" style="width:80%" alt="Give and Take">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">In Balance 2</div>
-        <img src="../images/graphics/in-balance-duplicate.jpg" style="width:80%">
+        <img src="../images/graphics/in-balance-duplicate.jpg" style="width:80%" alt="Find Balance">
     </div>
 
+    <!--NEXT / PREV button-->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
