--- a/pages/photography.html
+++ b/pages/photography.html
@@ -4,6 +4,8 @@
 <head>
     <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Janine B. Fernandez Portfolio Photography. Creativity never stops. Discover your process.">
+    <meta name="keywords" content="Janine B. Fernandez, Janine, Fernandez, Janine Fernandez Portfolio, Design, Creativity, Art, Digital Art, Photography, San Diego, Photos, Images">
     <meta charset="UTF-8">
 
     <!--Javascript-->
@@ -26,7 +28,6 @@
 </head>
 
 <body>
-<!--<div class = "my_background"></div>-->
 <div class = "wrapper_body">
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
@@ -37,10 +38,10 @@
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Janine Fernandez Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -48,55 +49,55 @@
 <h2 class="page_title">Photography</h2>
 <div class="row">
     <div class="column">
-        <img src="../images/photography/icon/balance-icon.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/balance-icon.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor" alt="Balanced rocks in Torrey Pines Beach">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/beyond-icon.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/beyond-icon.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor" alt="Flower bead overlooping Torrey Pines Beach">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/purple-hive-icon.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/purple-hive-icon.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor" alt="Bee hovering a beautiful purple flower">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/sunset-icon.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/sunset-icon.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor" alt="Community in the Torrey Pines area enjoying the beach sunset">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/boat-house-icon.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/boat-house-icon.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor" alt="San Clemente beach home and restaurant">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/princess-icon.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/princess-icon.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor" alt="Princesses and Maleficent">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/beach-side-icon.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/beach-side-icon.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor" alt="Night Photography with a couple by the beach">
     </div>
     <div class="column">
-        <img src="../images/photography/icon/trip-icon.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/trip-icon.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor" alt="Friends and Trips">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor" alt="Night Photography San Diego Light">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor" alt="San Diego Night Photography of Baboa Park Pavillion">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor" alt="San Diego Shelter Island with single boat">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor" alt="Shelter Island San Diego overviewing the city skyline">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1966/45721911251_bf254dc6c4_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1966/45721911251_bf254dc6c4_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor" alt="San Diego city and local boats">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor" alt="Night Photography overlooking Downtown San Diego">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor" alt="Balboa Park Botanical Building">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor" alt="San Diego Beach side silhouette">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(17)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(17)" class="hover-shadow cursor" alt="San Diego Mission Bay Bridge Night Photography">
     </div>
 
 </div><!--row ends-->
@@ -107,89 +108,90 @@
 
     <div class="mySlides">
       <div class="numbertext">Balance</div>
-      <img src="../images/photography/balance.jpg" style="width:80%">
+      <img src="../images/photography/balance.jpg" style="width:80%" alt="Balanced rocks in Torrey Pines Beach">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Beyond</div>
-      <img src="../images/photography/beyond.jpg" style="width:80%">
+      <img src="../images/photography/beyond.jpg" style="width:80%" alt="Flower bead overlooping Torrey Pines Beach">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Purple Hive</div>
-      <img src="../images/photography/purple-hive.jpg" style="width:80%">
+      <img src="../images/photography/purple-hive.jpg" style="width:80%" alt="Bee hovering a beautiful purple flower">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Sunset Community</div>
-      <img src="../images/photography/sunset.jpg" style="width:80%">
+      <img src="../images/photography/sunset.jpg" style="width:80%" alt="Community in the Torrey Pines area enjoying the beach sunset">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Boat House</div>
-      <img src="../images/photography/boat-house.jpg" style="width:80%">
+      <img src="../images/photography/boat-house.jpg" style="width:80%" alt="San Clemente beach home and restaurant">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Princess</div>
-      <img src="../images/photography/princess.jpg" style="width:80%">
+      <img src="../images/photography/princess.jpg" style="width:80%" alt="Princesses and Maleficent">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Beach Side</div>
-      <img src="../images/photography/beach-side.jpg" style="width:80%">
+      <img src="../images/photography/beach-side.jpg" style="width:80%" alt="Night Photography with a couple by the beach">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Trip</div>
-      <img src="../images/photography/trip.jpg" style="width:80%">
+      <img src="../images/photography/trip.jpg" style="width:80%" alt="Friends and Trips">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Over the Fire</div>
-      <img src="https://farm5.staticflickr.com/4846/31850406848_ac0552d1c4_o_d.jpg" style="width:80%">
+      <img src="https://farm5.staticflickr.com/4846/31850406848_ac0552d1c4_o_d.jpg" style="width:80%" alt="Night Photography San Diego Light">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Pavillion</div>
-        <img src="https://farm5.staticflickr.com/4803/31850428788_307982a4f5_o_d.jpg" style="width:80%">
+        <img src="https://farm5.staticflickr.com/4803/31850428788_307982a4f5_o_d.jpg" style="width:80%" alt="San Diego Night Photography of Baboa Park Pavillion">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">San Diego Sunset</div>
-        <img src="https://farm2.staticflickr.com/1909/45671424462_6afe2c2be4_o_d.jpg" style="width:80%">
+        <img src="https://farm2.staticflickr.com/1909/45671424462_6afe2c2be4_o_d.jpg" style="width:80%" alt="San Diego Shelter Island with single boat">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Shelter Island 1</div>
-        <img src="https://farm2.staticflickr.com/1971/31850376608_9a389154c3_o_d.jpg" style="width:80%">
+        <img src="https://farm2.staticflickr.com/1971/31850376608_9a389154c3_o_d.jpg" style="width:80%" alt="Shelter Island San Diego overviewing the city skyline">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Shelter Island 2</div>
-        <img src="https://farm2.staticflickr.com/1966/45721911251_731446f4f9_o_d.jpg" style="width:80%">
+        <img src="https://farm2.staticflickr.com/1966/45721911251_731446f4f9_o_d.jpg" style="width:80%" alt="San Diego city and local boats">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Into the City</div>
-        <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:80%">
+        <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:80%" alt="Night Photography overlooking Downtown San Diego">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Balboa Night</div>
-      <img src="https://farm5.staticflickr.com/4853/44997209154_7252ff3c38_o_d.jpg" style="width:80%">
+      <img src="https://farm5.staticflickr.com/4853/44997209154_7252ff3c38_o_d.jpg" style="width:80%" alt="San Diego Night Photography of Baboa Park">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">Birds View</div>
-      <img src="https://farm5.staticflickr.com/4815/31850480948_ea3a968ef9_o_d.jpg" style="width:80%">
+      <img src="https://farm5.staticflickr.com/4815/31850480948_ea3a968ef9_o_d.jpg" style="width:80%" alt="San Diego Beach side silhouette">
     </div>
     
     <div class="mySlides">
       <div class="numbertext">Bridge Point</div>
-      <img src="https://farm2.staticflickr.com/1969/44807998995_ac1996a13e_o_d.jpg" style="width:80%">
+      <img src="https://farm2.staticflickr.com/1969/44807998995_ac1996a13e_o_d.jpg" style="width:80%" alt="San Diego Mission Bay Bridge Night Photography">
     </div>
     
+    <!--NEXT / PREV button-->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
