--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--PORTFOLIO PAGE - Black on White - HTML-->
 <!DOCTYPE html>
 <head>
-    <!--GOOGLE ANALYTICS START-->
+<!--GOOGLE ANALYTICS START-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132225675-1"></script>
 <script>
@@ -11,12 +11,14 @@
 
   gtag('config', 'UA-132225675-1');
 </script>
-    <!--GOOGLE ANALYTICS ENDS-->
-    <!--GOOGLE WEBMASTER TOOL START-->
+<!--GOOGLE ANALYTICS ENDS-->
+<!--GOOGLE WEBMASTER TOOL START-->
     <meta name="google-site-verification" content="ZT-j7V2ZNz3gB6tCpHdm-MlS_cqu8zFKQktu_RtQhDQ" />
     <!--GOOGLE WEBMASTER TOL ENDS-->
     <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Janine B. Fernandez Portfolio. Creativity never stops. Discover your process.">
+    <meta name="keywords" content="Janine B. Fernandez, Janine, Fernandez, Janine Fernandez Portfolio, Design, Creativity, Art, Digital Art, Photography, Wed Development, Web Design, UX, UI, Logo, Typography, Project Management">
     <meta charset="UTF-8">
 
     <!--Javascript-->
@@ -36,7 +38,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <style>
 
-   .nav{
+.nav{
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -63,14 +65,14 @@
     <div class = "gridwrapper">
         <div class="box header_welcome tran1a">welcome</div>
         <div class="box header_pagename tran1b">
-            <a href="#"><p>Janine B. Fernandez | <!--<img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"> | -->Porfolio</p></a>
+            <a href="#"><p>Janine B. Fernandez | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/icons/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/icons/flickr-icon.png" alt="Janine Fernandez Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -78,7 +80,7 @@
             <div class = "gridwrapper_content tran2">
                 <div class="box mylogo">
                     <p id = "logo_image">
-                        <img src="images/logo-2019-mini.png" alt="Janine B. Fernandez Logo">
+                        <img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo">
                     </p> 
                 </div>
                       
@@ -98,11 +100,11 @@
 <div id="aboutme_des">
         <p id="header_contact">ABOUT ME</p>
         <p id="aboutme_content">
-            Art has always facinated me. It has endless possibilities, crazy experience during its process, and takes on many different forms.
-            When it comes to art there is no such thing as failing, only outcomes. 
-            There's nothing more satisfying than stepping back and looking at the end result. Please, enjoy!
+            Art and the digital world colliding is a field with endless outcomes. 
+            I aim to surround myself in an environment that will foster my interest and growth.
+            As I learn new things, I strive to use my knowledge and skills in creating 
+            something new or build on a solid foundation. 
             <br>
-            <!---<br><a href="https://www.dropbox.com/s/2bxco2lkplo126d/Janine_Fernandez_Resume_021119.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>-->
             <br>
             <br>
         </p>
@@ -111,7 +113,7 @@
 <div id="contactme_des">
         <p id="header_contact">CONTACT ME</p>
         <div id="contactme_content">
-            <p>Contact me directly at: </p>
+            <p>Please contact me directly at: </p>
             <p id="my_email">janinebfernandez@gmail.com</p>
             <p>I'd would love to hear from you!</p>
             <p><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a></p>
