--- a/pages/logo.html
+++ b/pages/logo.html
@@ -4,6 +4,8 @@
 <head>
     <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Janine B. Fernandez Portfolio. Creativity never stops. Discover your process.">
+    <meta name="keywords" content="Janine B. Fernandez, Janine, Fernandez, Janine Fernandez Portfolio, Design, Creativity, Art, Digital Art, Logo, Logo Design">
     <meta charset="UTF-8">
 
     <!--Javascript-->
@@ -44,27 +46,27 @@
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Janine Fernandez Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
 <!--CONTENT BEGINS-->
 <h2 class="page_title">Logo Design</h2>
 <div class="project_container">
-<!--PROJECTS-->
-    <a class="trigger_popup_fricc"><img id="car_icon" src="../images/logo/caffeine-small-icon.png"></a>
-    <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png"></a>
-<!--POP UP-->
-<!--Car_Meet Pop up-->
+<!--PROJECTS ICON-->
+    <a class="trigger_popup_fricc"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
+    <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
+
+<!--Content Pop up-->
 <div class="hover_bkgr_fricc">
     <span class="helper"></span>
     <div>
         <div id="header_contact">Caffeine92</div>
         <div id="slide_1">
-            <img id="caffeine-logo" src="../images/logo/caffeine92-a.jpg" alt="Caffeine92 Logo Design">
+            <img id="caffeine-logo" src="../images/logo/caffeine92-a.jpg" alt="Caffeine92 Coffee Shop Variety Logo">
         
         </div><!--slide_1 ENDS-->
         <div class="popupCloseButton">X</div>
@@ -76,7 +78,7 @@
         <div>
             <div id="header_contact">MaPa Cuisine</div>
             <div id="slide_1"><br>
-                <img id="MPC-logo" src="../images/logo/MaPaCuisine-2.jpg" alt="Caffeine92 Logo Design">
+                <img id="MPC-logo" src="../images/logo/MaPaCuisine-2.jpg" alt="MaPa Cuisine Variety Logo">
             
             </div><!--slide_1 ENDS-->
             <div class="popupCloseButton">X</div>
