--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,8 @@
 <head>
     <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Janine B. Fernandez Portfolio Project Page. Creativity never stops. Discover your process.">
+    <meta name="keywords" content="Janine B. Fernandez, Janine, Fernandez, Janine Fernandez Portfolio, Project Page, Design, Creativity, Art, Digital Art, Project Management, Car Meet, BMW, Event Page, Business Card, X Gloss, Double End, LMGC, Lake Miramar, Lake Mira Mar Golf Course, Golf Course, 9 Holes, Scorecard, Coffee, Caffeine92, Types of Coffe, Barista Art, Zodiac Sign">
     <meta charset="UTF-8">
 
     <!--Javascript-->
@@ -39,14 +41,14 @@
     <div class = "gridwrapper">
         <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/icons/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
-            <a href="../index.html"><p>Janine B. Fernandez | <!--<img src="../images/j.ix-logo.png" alt="Janine B. Fernandez Logo"> | -->Porfolio</p></a>
+            <a href="../index.html"><p>Janine B. Fernandez | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Janine Fernandez Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -54,11 +56,11 @@
 <h2 class="page_title">Projects</h2>
 <div class="project_container">
 <!--PROJECTS-->
-    <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png"></a>
-    <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png"></a>
-    <a href="projects/golf_course.html"><img id="car_icon" src="../images/projects/golf_course/LMGC-icon-small.png"></a>
-    <a href="projects/coffee_infographics.html"><img id="car_icon" src="../images/projects/coffee_info/Coffee-inforgraph-icon-small.png"></a>
-    <a href="projects/zodiac_sign.html"><img id="car_icon" src="../images/projects/zodiac_sign/zodiac-icon-small.png"></a>
+    <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png" alt="Mira Mesa Car Meet"></a>
+    <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png" alt="Janine Fernandez Business Card"></a>
+    <a href="projects/golf_course.html"><img id="car_icon" src="../images/projects/golf_course/LMGC-icon-small.png" alt=""></a>
+    <a href="projects/coffee_infographics.html"><img id="car_icon" src="../images/projects/coffee_info/Coffee-inforgraph-icon-small.png" alt="Coffee Infographics"></a>
+    <a href="projects/zodiac_sign.html"><img id="car_icon" src="../images/projects/zodiac_sign/zodiac-icon-small.png"alt="Zodiac Sign Personality"></a>
 <!--POP UP-->
 <!--Car_Meet Pop up-->
 <div class="hover_bkgr_fricc">
@@ -66,10 +68,9 @@
     <div>
         <div id="header_contact">Car Meet Ads</div>
         <div id="slide_1">
-            <img class="car_ads" src="../images/projects/car_meet/Ads-CarMeet-2.jpg">
-            <img class="car_ads" src="../images/projects/car_meet/Ads-CarMeet-zoom-gold.jpg">
-            <img class="car_ads" src="../images/projects/car_meet/Ads-CarMeet-zoom-blue.jpg">
-        
+            <img class="car_ads" src="../images/projects/car_meet/Ads-CarMeet-2.jpg" alt="Car Meer Cars and Coffee Poster">
+            <img class="car_ads" src="../images/projects/car_meet/Ads-CarMeet-zoom-gold.jpg" alt="Car Meet Poster Yellow">
+            <img class="car_ads" src="../images/projects/car_meet/Ads-CarMeet-zoom-blue.jpg" alt="Car Meet Poster Blue">
         </div><!--slide_1 ENDS-->
         <div class="popupCloseButton">X</div>
     </div>
@@ -80,9 +81,8 @@
         <div>
             <div id="header_contact">Business Card Designs</div>
             <div id="slide_1">
-                <img class="car_ads" src="../images/projects/cards/card-xgloss.png">
-                <img class="car_ads" src="../images/projects/cards/card-doubleend.png">
-            
+                <img class="car_ads" src="../images/projects/cards/card-xgloss.png" alt="Janine Fernandez XGloss Business Card">
+                <img class="car_ads" src="../images/projects/cards/card-doubleend.png" alt="Janine Fernandez Double End Business Card">
             </div><!--slide_1 ENDS-->
             <div class="popupCloseButton">X</div>
         </div>
