--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!--PORTFOLIO PAGE - Black on White - HTML-->
 <!DOCTYPE html>
+<html>
 <head>
 <!--GOOGLE ANALYTICS START-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
