--- a/pages/logo.html
+++ b/pages/logo.html
@@ -84,7 +84,7 @@
             <div class="popupCloseButton">X</div>
         </div>
     </div>
-</div><!--container ends-->
+</div><!--project container ends-->
 </div><!--gridwrapper ends-->
 </div><!--bodywrapper ends-->
 </div><!--wrapper_body ENDS-->
