--- a/pages/uxui/caffeine92.html
+++ b/pages/uxui/caffeine92.html
@@ -1,42 +1,62 @@
 <!--********CAFFEINE92 - HOME - UXUI Design*********-->
 <!DOCTYPE html>
 <head>
+    <title>Janine B. Fernandez Portfolio: Caffeine92</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Janine B. Fernandez Portfolio. Creativity never stops. Discover your process.">
+    <meta name="keywords" content="Janine B. Fernandez, Janine, Fernandez, Janine Fernandez Portfolio, Design, Creativity, Art, Digital Art, Wed Development, Web Design, UX, UI, Caffeine92, Coffee Shop, Caffeine">
+    <meta charset="UTF-8">
+    
+    <!--Stylesheet-->
     <link href="../../css/caffeine92.css" type="text/css" rel="stylesheet">
+    
 <style>
 
+.caffeine92_wrapper{
+    height:45em;
+}
 #select_1 a{
     color: rgb(179, 118, 5);
     border-bottom: 2px solid rgb(179, 118, 5);
 }
+
+#left_content{
+    line-height:2em;
+}
+
+#right_content img{
+    width:100%;
+}
+
 </style>
 
 </head>
 <body>
-<div id="caffeine92_wrapper">
+<div class="caffeine92_wrapper">
 <nav>
     <div id="caffeine92_logo"><img src="../../images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
     <ul class="float_l nav1">
         <li id="select_1"><a href="caffeine92.html">Home</a></li>
-        <li id="select_2"><a href="caffeine92-drinks.html">Drinks</a></li>
-        <li id="select_3"><a href="caffeine92-snacks.html">Snacks</a></li>
+        <li id="select_2"><a href="caffeine92/drinks.html">Drinks</a></li>
+        <li id="select_3"><a href="caffeine92/snacks.html">Snacks</a></li>
         </ul>
     <ul class="float_r nav2">
-        <li id="select_4"><a href="caffeine92-members.html">Members</a></li>
-        <li id="select_5"><a href="caffeine92-aboutus.html">About Us</a></li>
+        <li id="select_4"><a href="caffeine92/members.html">Members</a></li>
+        <li id="select_5"><a href="caffeine92/aboutus.html">About Us</a></li>
     </ul>
 </nav>
     <div id="left_content">
-        <h1>Delivering caffeine within seconds.</h1>
+        <h1>Caffeine within seconds.</h1>
         <h3 id="h3_top">The fastest, best quality coffee in your hands.</h3>
         <p>Add content text here. Add content text here. Add content text here. Add content text here. Add content text here. Add content text here.Add content text here. Add content text here. Add content text here.Add content text here. </p>
         <div id="left_content_icons">
             <h3 id="h3_bot">Fastest coffee drive thru.</h3>
-            <img src="" alt="Deliver Icons">
+            <img src="../../images/web_design/Caffeine92/deliver-icon.jpg" alt="Deliver Icons">
         </div>
 
     </div><!--left content ENDS-->
     <div id="right_content">
-        <img src="" alt=""><p>Place Holder Image</p>
+        <img src="../../images/web_design/Caffeine92/hp_cup.jpg" alt="caffeine92 Home Page Cup">
     </div><!--right content ENDS-->
 
 </div><!--caffein92_wrapper ENDS-->
