--- a/pages/uxui/caffeine92/drinks.html
+++ b/pages/uxui/caffeine92/drinks.html
@@ -39,7 +39,7 @@
             <span class="helper"></span>
             <div class="img_control">
                 <div class="popupCloseButton">X</div>
-                <img src="../../../images/web_design/caffeine92/giftcard-project-service.jpg"/>
+                <img src="../../../images/web_design/caffeine92/giftcard-project-service.jpg" alt="">
             </div>
         </div>
         <!--MENU POP UP ENDS-->
