--- a/pages/uxui/caffeine92/aboutus.html
+++ b/pages/uxui/caffeine92/aboutus.html
@@ -55,7 +55,7 @@
 
     </div><!--left content ENDS-->
     <div id="right_content">
-        <img src="../../../images/web_design/Caffeine92/about_us_cup.jpg" alt="">
+        <img src="../../../images/web_design/Caffeine92/about_us_cup.jpg" alt="Caramel Macchiato">
     </div><!--right content ENDS-->
 
 </div><!--caffein92_wrapper ENDS-->
