--- a/pages/uxui/caffeine92/drinks.html
+++ b/pages/uxui/caffeine92/drinks.html
@@ -39,14 +39,14 @@
             <span class="helper"></span>
             <div class="img_control">
                 <div class="popupCloseButton">X</div>
-                <img src="../../../images/web_design/caffeine92/giftcard-project-service.jpg" alt="">
+                <img src="../../../images/web_design/caffeine92/giftcard-project-service.jpg" alt="Caffeine92 Membership Gift Cards">
             </div>
         </div>
         <!--MENU POP UP ENDS-->
         <div id="coffee_drinks">
             <ul>
                 <li>
-                    <img src="../../../images/projects/coffee_info/drip-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/drip-mid.png" alt="Regular Brewed coffee">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>DRIP</h4>
                             <p>regular brewed coffee</p></div>
@@ -55,7 +55,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/espresso-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/espresso-mid.png" alt="espresso drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>ESPRESSO</h4>
                             <p>max. 6 shots, safety first</p></div>
@@ -64,7 +64,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/latte-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/latte-mid.png" alt="latte drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>LATTE</h4>
                             <p>milk + espresso</p></div>
@@ -73,7 +73,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/cappuccino-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/cappuccino-mid.png" alt="cappucino drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>CAPPUCCINO</h4>
                             <p>espresso + milk + foam</p></div>
@@ -82,7 +82,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/americano-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/americano-mid.png" alt="americano drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>AMERICANO</h4>
                             <p>hot water + espresso</p></div>
@@ -91,7 +91,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/mocha-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/mocha-mid.png" alt="mocha drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>MOCHA</h4>
                             <p>milk + espresso + chocolate + whip</p></div>
@@ -100,7 +100,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/whitemocha-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/whitemocha-mid.png" alt="white mocha drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>WHITE MOCHA</h4>
                             <p>milk + espresso + white chocolate + whip</p></div>
@@ -109,7 +109,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/flatwhite-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/flatwhite-mid.png" alt="flat white drink">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>FLAT WHITE</h4>
                             <p>whole milk + ristretto shots</p></div>
@@ -118,7 +118,7 @@
                     </span>
                 </li>
                 <li>
-                    <img src="../../../images/projects/coffee_info/caramelmacchiato-mid.png" alt="">
+                    <img src="../../../images/projects/coffee_info/caramelmacchiato-mid.png" alt="caramel macchiato">
                     <span class="drink_info">
                         <div class="drink_desciption"><h4>CARAMEL MACCHIATO</h4>
                             <p>milk + espresso + vanilla + caramel sauce</p></div>
