--- a/pages/uxui/caffeine92/members.html
+++ b/pages/uxui/caffeine92/members.html
@@ -73,12 +73,12 @@ form p a:hover{
         <div id="left_content_icons">
             <h1>Coffee on the go, literally.</h1>
             <h3 id="h3_bot">Become a member and enjoy these great benefits!</h3>
-            <img src="../../../images/web_design/Caffeine92/ad-icon.jpg" alt="Deliver Icons">
+            <img src="../../../images/web_design/Caffeine92/ad-icon.jpg" alt="Caffeine92 Benefits">
         </div>
 
     </div><!--left content ENDS-->
     <div id="right_content">
-        <img src="../../../images/projects/coffee_info/caramelmacchiato-mid.png" alt="">
+        <img src="../../../images/projects/coffee_info/caramelmacchiato-mid.png" alt="Caramel Macchiato">
         <span><p><a href="">Member Profile</a></p><p><a href="">Sign Up</a></p></span>
     </div><!--right content ENDS-->
 
