--- a/pages/uxui/caffeine92/snacks.html
+++ b/pages/uxui/caffeine92/snacks.html
@@ -50,14 +50,14 @@
                 <span class="helper"></span>
                 <div class="img_control">
                     <div class="popupCloseButton">X</div>
-                    <img src="../../../images/web_design/caffeine92/giftcard-project-service.jpg"/>
+                    <img src="../../../images/web_design/caffeine92/giftcard-project-service.jpg" alt="Caffeine92 Membership Gift Cards">
                 </div>
             </div>
         <!--MENU POP UP ENDS-->
         <div id="coffee_snacks">
             <ul>
                 <li id="bagels_"><h4>BAGELS</h4>
-                    <img src="../../../images/web_design/Caffeine92/food-bagels.png" alt="">
+                    <img src="../../../images/web_design/Caffeine92/food-bagels.png" alt="Caffeine92 bagels">
                     <span class="snack_info">
                         <p>Plain</p>
                         <p>Everything</p>
@@ -65,7 +65,7 @@
                     </span>
                 </li>
                 <li id="cookies_"><h4>COOKIES</h4>
-                    <img src="../../../images/web_design/Caffeine92/food-cookies.png" alt="">
+                    <img src="../../../images/web_design/Caffeine92/food-cookies.png" alt="Caffeine92 Cookies">
                     <span class="snack_info">
                         <p>Chocolate</p>
                         <p>Macadamia White Chocolate</p>
@@ -73,7 +73,7 @@
                     </span>
                 </li>
                 <li id="cros_"><h4>CROISSANT</h4>
-                    <img src="../../../images/web_design/Caffeine92/food-cros.png" alt="">
+                    <img src="../../../images/web_design/Caffeine92/food-cros.png" alt="Caffeine92 Crossaints">
                     <span class="snack_info">
                         <p>Butter</p>
                         <p>Chocolate</p>
@@ -81,7 +81,7 @@
                     </span>
                 </li>
                 <li><h4>MUFFIN</h4>
-                    <img src="../../../images/web_design/Caffeine92/food-muffin.png" alt="">
+                    <img src="../../../images/web_design/Caffeine92/food-muffin.png" alt="Caffeine92 Muffin">
                     <span class="snack_info">
                         <p>Blueberry</p>
                         <p>Banana</p>
