--- a/pages/uxui/mpCuisine/menu.html
+++ b/pages/uxui/mpCuisine/menu.html
@@ -30,10 +30,6 @@
         height:130em;
     }
 
-
-
-
-
     </style>
 </head>
 <body> 
@@ -61,7 +57,7 @@
             <button>ORDER NOW</button>
             <p>LOCATED IN THE HEART OF MIRA MESA</p>
         </div>
-        <div id="food_menu"><img src="../../../images/web_design/MaPa_Cuisine/MaPa-Menu.jpg"/></div>
+        <div id="food_menu"><img src="../../../images/web_design/MaPa_Cuisine/MaPa-Menu.jpg" alt="MaPa Cuisine Menu"></div>
     </div><!--body_wrapper ENDS-->
     <footer>
         <ul class="mpc_footer mpc_links">
