--- a/pages/uxui/mpCuisine/reservations.html
+++ b/pages/uxui/mpCuisine/reservations.html
@@ -88,7 +88,7 @@
                 <input type="submit" value="Submit">
             </form>
         </div><!--form_container ENDS-->
-        <div class="utensil_background"><img src="../../../images/web_design/MaPa_Cuisine/utensil_background.jpg"/></div>
+        <div class="utensil_background"><img src="../../../images/web_design/MaPa_Cuisine/utensil_background.jpg" alt="MaPa Cuisine Utensils"></div>
         <!--FORM ENDS-->
     </div><!--body_wrapper ENDS-->
     <footer>
